# libmfp2-canon

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  libmfp2-canon.spec
debian/: changelog  control  install  rules
etc/sane.d/: canon_pixma.conf
include/: Makefile  Makefile.in  cnmslld.h
src/: CMakeLists.txt  Makefile.am  Makefile.in  canon_mfp_io.c  canon_mfp_tools.c  canon_mfp_tools.h  canon_pixma.c  canon_pixma.h  cnmsfunc.c  cnmsfunc.h  cnmsstrings.h  errordlg.c  errordlg.h  errors.h  file_control.c  file_control.h  keep_setting.c  keep_setting.h  sanei.h  support.h
usr/share/scangearmp2/: CMakeLists.txt
